1st attempt at refactoring according to java-style and fix for writing credit card as "xxxx-xxxx-xxxx-xxxx", not "xxxxxxxxxxxxxxxx"